<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess What</string>
    <string name="empty">There is no records</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rank">Rank</string>
    <string name="points">Points</string>
    <string name="plus1heart">+ 1 heart</string>
    <string name="watchAd">Watch ad</string>
    <string name="rateApp">Rate app</string>
    <string name="shareInFacebook">Share in facebook</string>

</resources>
