<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RecordsActivity">

    <ImageView
        android:src="@drawable/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:id="@+id/background" />

    <LinearLayout
        android:weightSum="60"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center">
        
        <LinearLayout
	        android:weightSum="2"
	        android:layout_weight="10"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:layout_height="0dip">
	        <TextView 
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="fill_parent"
	            android:text="@string/rank"
	            style="@style/WhiteTextView"/>
	        <TextView 
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="fill_parent"
	            android:text="@string/points"
	            style="@style/WhiteTextView"/>
       	</LinearLayout>

        <ListView
            android:id="@+id/lstRecords"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:divider="@null"
            android:dividerHeight="4dp"
            android:layout_weight="50"
            android:listSelector="@drawable/dialog_frame"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"/>

        <!-- Here is the view to show if the list is emtpy -->
        <TextView android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>